# new

./: .gitignore  CMakeLists.txt  README.md  games.cpp  shader.cpp  shader.h  test.cpp
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
dep/glfw/lib/pkgconfig/: glfw3.pc
dep/glm/: CMakeLists.txt
dep/glm/ext/: matrix_transform.inl
gl/: ebo.cpp  ebo.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vertex_control.cpp  vertex_control.h
res/shader/: triangle.fs  triangle.vs
util/: stb_image.h  util.cpp  util.h
